--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ avatar: 'https://blog.josh.me.uk/images/Shared%20Content/monogram.png'
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: hello@josh.me.uk
+  email: hello@parkruncancellations.com
   facebook:
   flickr:
   github: josh-justjosh/parkrun-Cancellations
